2009-01-06  kokosabu  <kokosabu@gmail.com>

        * FileBinaryInputPort: stream to file descriptor.

2009-01-06  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/pp.scm (mosh): Added (mosh pp) library.

        * Added %exec. Not *Tested* yet.

        * ProcessProcedures.cpp (internalForkEx): Added %fork procedure.
                             (internalWaitpidEx): Added %waitpid procedure.

        * ProcessProcedures.cpp.h: Added.

2009-01-05  kokosabu  <kokosabu@gmail.com>

        * Fixed: fxdiv, fxmod, fxdiv0, fxmod0.

        * Makefile.am: '/usr/local/bin/re2c' to 're2c'.

2009-01-05  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/shell.scm (shell-utilities): Added (experimental).

        * scanner.re (Scanner): Allow '-xx' identifier for shell mode.

2009-01-04  higepon  <higepon@users.sourceforge.jp>

        * test/srfi-19-test-suite.scm: Added test for srfi-19.

        * lib/srfi/%3A19.ss (srfi): Added srfi-19 support.

        * UtilityProcedures.cpp (microsecondEx): Added microsecond procedure.
                              (localTzOffsetEx): Added local-tz-offset.

2009-01-03  higepon  <higepon@users.sourceforge.jp>

        * main.cpp (main): Added --loadpath option.

        * Added .mosh.sls prefix file loading.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss : Use MOSH_LOADPATH for adding load-library-path.

        * When a port is not referenced by any objects, it will be closed automatically.

        * TestingFileBinaryOutputPort.h : Test for closing port automatically.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss (guard-macro): Allowed definition in guard body.

2009-01-02  higepon  <higepon@users.sourceforge.jp>

        * Makefile.am : Added R6RS pre-compilation support!.

        * FaslTest.cpp (TEST_F): Added write/read support of EqvHashTable.

        * Fasl.h (scheme): Added write/read support of Record.
