@@ -1,3 +1,7 @@
+2009-01-06  higepon  <higepon@users.sourceforge.jp>
+
+        * compiler.scm (pass2/const-inliner): Fixed invalid const-inliner.(thanks mrc.mgg)
+
 2009-01-06  kokosabu  <kokosabu@gmail.com>
 
         * FileBinaryInputPort: stream to file descriptor.
